--- a/css/css.css
+++ b/css/css.css
@@ -6,6 +6,10 @@
           box-sizing: border-box;
 }
 
+body {
+  position: relative;
+}
+
 li {
   list-style: none;
 }
@@ -24,7 +28,7 @@ h1, h2, h3, h4 {
 }
 
 .wrapper {
-  max-width: 1500px;
+  max-width: 1300px;
   width: 80%;
   margin: auto;
 }
@@ -46,63 +50,68 @@ header i {
 }
 
 .menu {
-  padding: 20px 0px;
+  padding: 30px 0px;
+}
+
+nav img {
+  display: none;
 }
 
 nav a {
   display: block;
-  padding: 0px 10px;
+  padding: 0px 20px;
   color: #837d87;
   font-size: 1.2rem;
-  font-weight: 700;
+  font-weight: 400;
+}
+
+nav a:hover {
+  color: #2b272f;
 }
 
 nav li:last-child a {
   border: 1px solid #000;
   padding: 5px 25px;
   margin-left: 15px;
-  display: block;
+  display: inline-block;
 }
 
 nav li:last-child:hover a {
   color: #fff;
-  background: #000;
+  background: #2b272f;
 }
 
 .banner {
   padding: 150px 0px;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(67%, #2d2640), color-stop(67%, white));
-  background: linear-gradient(180deg, #2d2640 67%, white 67%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, #2d2640), color-stop(70%, white));
+  background: linear-gradient(180deg, #2d2640 70%, white 70%);
   color: #fff;
   position: relative;
   overflow: hidden;
 }
 
+.banner .wave-desktop {
+  position: absolute;
+  top: 0;
+  right: 0;
+  top: -43px;
+}
+
 .banner h1 {
-  font-size: 3rem;
+  font-size: 4.5rem;
   font-size: 700;
 }
 
 .banner p {
   margin: 25px 0px;
   line-height: 1.5;
-}
-
-.banner img {
-  position: absolute;
-  top: -43px;
-  right: 0;
-  height: 100%;
-}
-
-.banner .container img {
-  display: relative !important;
-  border: 1px solid red;
+  position: relative;
 }
 
 .banner .txt {
-  padding: 20px 0px;
-  border: 1px solid red;
+  padding: 20px 10px 0px 0px;
+  max-width: 550px;
+  z-index: 1;
 }
 
 .banner a {
@@ -116,6 +125,15 @@ nav li:last-child:hover a {
 .banner a:hover {
   color: #000;
   background: #fff;
+}
+
+.banner .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .find {
@@ -143,6 +161,7 @@ nav li:last-child:hover a {
   color: #fff;
   font-size: 3.5rem;
   width: 480px;
+  max-width: 100%;
   margin-right: 20px;
   position: relative;
 }
@@ -162,11 +181,19 @@ nav li:last-child:hover a {
   height: 100%;
 }
 
+.find .wave-mobile {
+  display: none;
+}
+
 footer {
   padding: 40px 0px;
   background: #fafafa;
   position: relative;
-  z-index: 1;
+  text-transform: uppercase;
+}
+
+footer .waves-mobile {
+  display: none;
 }
 
 footer img {
@@ -210,6 +237,7 @@ footer img {
   display: inline-block;
   color: #2b272f;
   font-weight: 700;
+  letter-spacing: 10;
 }
 
 .links a:hover {
@@ -247,44 +275,98 @@ footer img {
   font-weight: 400;
 }
 
+.different .wave-desktop {
+  position: absolute;
+  left: 0;
+  top: 550px;
+}
+
 @media screen and (max-width: 1000px) {
   .wrapper {
     width: 90%;
   }
 }
 
-@media screen and (max-width: 870px) {
-  .find {
-    background: #2d2640;
-    padding: 50px 0px;
-    position: relative;
-    overflow: hidden;
-  }
-  .find .container {
-    padding: 0px;
-    position: static;
-  }
-  .find h3 {
-    font-size: 2.5rem;
-  }
-  .different .container h2 {
-    font-size: 3rem;
+@media screen and (max-width: 1000px) {
+  .different .txt {
+    width: 30%;
   }
 }
 
-@media screen and (max-width: 800px) {
-  .find {
-    margin-top: 70px;
-    text-align: center;
+@media screen and (max-width: 870px) {
+  .menu {
+    display: block;
+    padding: 20px 0px;
   }
-  .find .container {
+  .menu i {
+    display: block;
+  }
+  nav {
+    background: #2b272f;
+    position: absolute;
+    z-index: 1;
+    top: 59px;
+    width: 100%;
+    right: 0;
+    height: 100vh;
+    display: none;
+  }
+  nav img {
+    display: block;
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+  }
+  nav ul {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  nav a {
+    margin-top: 40px;
+    color: #fff;
+  }
+  nav ul li:last-child {
+    width: 90%;
+  }
+  nav li:last-child a {
+    border: #fff 1px solid;
+    width: 100%;
+    margin-left: 0px;
+    text-align: center;
+    padding: 15px 0px;
+  }
+  .find {
+    background: #2d2640;
+    padding: 50px 0px;
+    position: relative;
+    overflow: hidden;
+    margin-top: 70px;
+    text-align: center;
+  }
+  .find .container {
+    padding: 0px;
+    position: static;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    overflow: initial;
+  }
   .find h3 {
+    font-size: 2rem;
     margin-bottom: 15px;
+    margin-right: 0px;
+  }
+  .find .wave-desktop {
+    display: none;
+  }
+  .find .wave-mobile {
+    display: block;
+  }
+  .different .container h2 {
+    font-size: 3rem;
   }
   .different {
     text-align: center;
@@ -299,6 +381,72 @@ footer img {
     width: 100%;
     max-width: 450px;
     margin: 0px auto 35px auto;
+  }
+  .different .wave-desktop {
+    border: 1px solid red;
+  }
+  footer {
+    text-align: center;
+  }
+  footer .waves-desktop {
+    display: none;
+  }
+  footer .waves-mobile {
+    display: block;
+    width: 100%;
+  }
+  footer .logo {
+    display: block;
+  }
+  footer .logo ul {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 15px;
+  }
+  footer .links .container {
+    display: block;
+  }
+  footer .links ul li:first-child a {
+    margin: 30px auto;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .different .container h2 {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .banner {
+    background: #2d2640;
+    padding: 0;
+  }
+  .banner .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .banner .container img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    right: 0;
+  }
+  .banner .txt {
+    padding: 50px 0px;
+    text-align: center;
+    margin: auto;
+    z-index: 0;
+    position: relative;
+  }
+  .banner .txt h1 {
+    font-size: 3.5rem;
+  }
+  .different .wave-desktop {
+    display: none;
   }
 }
 /*# sourceMappingURL=css.css.map */
