--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    position: relative;
+    }    
+
 li{
     list-style: none;
     } 
@@ -22,7 +26,7 @@ h1,h2,h3,h4{
    }                        
 
 .wrapper{
-    max-width: 1500px;
+    max-width: 1300px;
     width: 80%;
     margin: auto;
     }    
