--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -3,60 +3,206 @@
     .wrapper{
         width:90%; 
         }
+}
+
+@media screen and(max-width:1000px){
+
+.different {
+       
+    .txt{
+        width: 30%;
+  
+        }
+    } 
 
 }
 
 @media screen and(max-width:870px){
+
+    .menu {
+        display: block;
+        padding: 20px 0px;
+        i{
+            display: block;
+            }
+        }
+
+     nav {
+             background: $Very-Dark-Violet;
+             position: absolute;
+             z-index: 1;
+             top: 59px;
+             width: 100%;
+             right: 0;
+             height: 100vh;
+             display: none;
+
+             img{
+                 display: block;
+                 position: absolute;
+                 width: 100%;
+                 bottom: 0px;
+                 }
+
+             ul {
+                 flex-direction: column;
+                
+                 }
+
+            a{
+            margin-top: 40px ;
+            color: #fff ;
+            }  
+                
+         }
+
+        nav ul li:last-child{
+            width: 90%;
+            }     
+         
+        nav li:last-child a{
+          border: #fff 1px solid;
+          width: 100%;
+          margin-left: 0px; 
+          text-align: center;
+          padding: 15px 0px;
+
+             }         
+
 
     .find {
         background: $Dark-Violet;
         padding: 50px 0px;
         position: relative;
         overflow: hidden;
+        margin-top: 70px;
+        text-align: center;
         
         .container{
             padding: 0px;
             position: static;
+            flex-direction: column;
+            overflow: initial; 
             }
 
          h3 {
-             font-size: 2.5rem}       
+             font-size: 2rem;
+             margin-bottom: 15px;
+             margin-right: 0px;
+             }
+
+         .wave-desktop{
+             display: none;
+             }
+
+         .wave-mobile{
+             display: block;
+             }                  
         }
 
        .different .container h2 {
           font-size: 3rem;
     
-         }   
-}
+         }  
 
-@media screen and(max-width:800px){
-
-    .find {
-         margin-top: 70px;
-        text-align: center;
-
-        .container{
-            flex-direction: column;           
-            }
-
-          h3{
-              margin-bottom: 15px;
-              }           
-        }
 
 .different {
+
     text-align: center;
     .main-txt{
+
         flex-direction: column;
         }
+
     .txt{
         width: 100%;
         max-width: 450px;
         margin: 0px auto 35px auto;
         }
-    } 
+
+     .wave-desktop{
+         border: 1px solid red;}       
+    }  
+
+    footer {   //*FOOTER*//
+    
+    text-align: center;
+
+    .waves-desktop{
+        display: none;
+        }
+    .waves-mobile{
+        display: block;
+        width: 100%;}        
+
+    .logo{
+        display: block;
+        ul {
+            justify-content:center;
+            margin-top:15px;    
+                }
+        }
+
+    .links {
+        .container{
+            display: block;}
+        }
+
+    .links ul li:first-child a {
+    margin: 30px auto;
+      }                
+
+    }
+
+
+}
+
+
+@media screen and(max-width:700px){
+
+.different .container h2{
+    font-size: 2rem;
+    }
 
 }
 
 
 
+@media screen and(max-width:700px){
+
+.banner {
+
+    background: $Dark-Violet;
+    padding: 0;
+
+    .container{
+        flex-direction: column-reverse;
+
+    img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        right: 0;
+        }
+
+        }
+
+    .txt {
+        padding: 50px 0px;
+        text-align: center;
+        margin: auto;
+        z-index: 0;
+        position: relative;
+
+        h1{
+            font-size: 3.5rem;
+           
+            }
+        }
+    }
+
+ .different .wave-desktop{
+            display: none;
+        }       
+
+}    
