--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -23,14 +23,15 @@ $Very-Light-Gray: hsl(0, 0%, 98%);
         border: 1px solid #000;
         padding: 5px 25px;
         margin-left: 15px;
-        display: block;
+        display: inline-block;
+
         }
    
         &:hover{
             
             a{
               color: #fff;
-               background: #000;
+               background:$Very-Dark-Violet;
              }
             }
 }
