--- a/css/css.css
+++ b/css/css.css
@@ -2,8 +2,7 @@
 * {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -34,15 +33,9 @@ h1, h2, h3, h4 {
 }
 
 .dp-flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 header i {
@@ -83,11 +76,14 @@ nav li:last-child:hover a {
 
 .banner {
   padding: 150px 0px;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, #2d2640), color-stop(70%, white));
   background: linear-gradient(180deg, #2d2640 70%, white 70%);
   color: #fff;
   position: relative;
   overflow: hidden;
+}
+
+.banner .mobile {
+  display: none;
 }
 
 .banner .wave-desktop {
@@ -108,10 +104,14 @@ nav li:last-child:hover a {
   position: relative;
 }
 
-.banner .txt {
+.banner .txt .main {
   padding: 20px 10px 0px 0px;
   max-width: 550px;
   z-index: 1;
+}
+
+.banner .txt img {
+  display: none;
 }
 
 .banner a {
@@ -128,12 +128,8 @@ nav li:last-child:hover a {
 }
 
 .banner .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 .find {
@@ -245,9 +241,7 @@ footer img {
 }
 
 .links .container, .different .main-txt {
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
+  align-items: start;
 }
 
 .different .container h2 {
@@ -291,6 +285,9 @@ footer img {
   .different .txt {
     width: 30%;
   }
+  .banner h1 {
+    font-size: 3rem;
+  }
 }
 
 @media screen and (max-width: 870px) {
@@ -300,6 +297,8 @@ footer img {
   }
   .menu i {
     display: block;
+    border: 1px solid #2d2640;
+    padding: 4px;
   }
   nav {
     background: #2b272f;
@@ -318,10 +317,7 @@ footer img {
     bottom: 0px;
   }
   nav ul {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   nav a {
     margin-top: 40px;
@@ -337,6 +333,50 @@ footer img {
     text-align: center;
     padding: 15px 0px;
   }
+  .banner {
+    background: #2d2640;
+    padding: 0px;
+    overflow: visible;
+  }
+  .banner .desktop {
+    display: none;
+  }
+  .banner .mobile {
+    display: block;
+  }
+  .banner .wrapper {
+    width: 100%;
+  }
+  .banner .container {
+    flex-direction: column-reverse;
+  }
+  .banner p {
+    margin: 25px 0px;
+    line-height: 1.5;
+  }
+  .banner .txt {
+    position: relative;
+  }
+  .banner .txt img {
+    display: block;
+    position: absolute;
+    top: 0;
+  }
+  .banner .txt .bottom {
+    right: 0;
+    top: 320px;
+  }
+  .banner .txt .main {
+    padding: 70px 0px;
+    margin-bottom: 20px;
+    text-align: center;
+    margin: auto;
+    width: 90%;
+    position: relative;
+  }
+  .banner .wave-desktop {
+    display: none;
+  }
   .find {
     background: #2d2640;
     padding: 50px 0px;
@@ -348,14 +388,11 @@ footer img {
   .find .container {
     padding: 0px;
     position: static;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
     overflow: initial;
   }
   .find h3 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     margin-bottom: 15px;
     margin-right: 0px;
   }
@@ -370,12 +407,13 @@ footer img {
   }
   .different {
     text-align: center;
+    margin-top: 50px;
+  }
+  .different span {
+    border: 1px solid red;
   }
   .different .main-txt {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .different .txt {
     width: 100%;
@@ -384,6 +422,7 @@ footer img {
   }
   .different .wave-desktop {
     border: 1px solid red;
+    display: none;
   }
   footer {
     text-align: center;
@@ -399,9 +438,7 @@ footer img {
     display: block;
   }
   footer .logo ul {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
     margin-top: 15px;
   }
   footer .links .container {
@@ -414,39 +451,19 @@ footer img {
 
 @media screen and (max-width: 700px) {
   .different .container h2 {
-    font-size: 2rem;
+    font-size: 2.5rem;
+  }
+  .different .txt h3 {
+    font-size: 1.5rem;
   }
 }
 
-@media screen and (max-width: 700px) {
-  .banner {
-    background: #2d2640;
-    padding: 0;
+@media screen and (max-width: 400px) {
+  .banner h1 {
+    font-size: 2.5rem;
   }
-  .banner .container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-  }
-  .banner .container img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    right: 0;
-  }
-  .banner .txt {
-    padding: 50px 0px;
-    text-align: center;
-    margin: auto;
-    z-index: 0;
-    position: relative;
-  }
-  .banner .txt h1 {
-    font-size: 3.5rem;
-  }
-  .different .wave-desktop {
-    display: none;
+  .find h3 {
+    font-size: 2rem;
   }
 }
 /*# sourceMappingURL=css.css.map */
