--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -62,6 +62,14 @@ footer img{
 .links .container,.different .main-txt { // CAMBIO LA PROPIEDAD FLEX PARA NO CENTRAR LOS ELEMENTOS
     align-items: start;
 }
+
+.different hr{
+    width: 250px;
+    margin-bottom: 30px;
+
+
+}
+
  
 .different .container h2{
     font-size: 4rem;
