--- a/css/css.css
+++ b/css/css.css
@@ -82,6 +82,11 @@ nav li:last-child:hover a {
   overflow: hidden;
 }
 
+.banner hr {
+  width: 200px;
+  margin-bottom: 20px;
+}
+
 .banner .mobile {
   display: none;
 }
@@ -244,6 +249,11 @@ footer img {
   align-items: start;
 }
 
+.different hr {
+  width: 250px;
+  margin-bottom: 30px;
+}
+
 .different .container h2 {
   font-size: 4rem;
   color: #2b272f;
@@ -294,21 +304,26 @@ footer img {
   .menu {
     display: block;
     padding: 20px 0px;
+    overflow: hidden;
   }
   .menu i {
     display: block;
     border: 1px solid #2d2640;
     padding: 4px;
   }
+  .mostrar {
+    right: 0%;
+    transition: 1s ease-in-out;
+  }
   nav {
     background: #2b272f;
     position: absolute;
     z-index: 1;
-    top: 59px;
+    top: 69px;
     width: 100%;
-    right: 0;
+    right: 100%;
     height: 100vh;
-    display: none;
+    transition: 1s ease-in-out;
   }
   nav img {
     display: block;
@@ -322,6 +337,8 @@ footer img {
   nav a {
     margin-top: 40px;
     color: #fff;
+    position: relative;
+    z-index: 1;
   }
   nav ul li:last-child {
     width: 90%;
@@ -337,6 +354,9 @@ footer img {
     background: #2d2640;
     padding: 0px;
     overflow: visible;
+  }
+  .banner hr {
+    display: none;
   }
   .banner .desktop {
     display: none;
@@ -372,7 +392,6 @@ footer img {
     text-align: center;
     margin: auto;
     width: 90%;
-    position: relative;
   }
   .banner .wave-desktop {
     display: none;
@@ -408,6 +427,11 @@ footer img {
   .different {
     text-align: center;
     margin-top: 50px;
+  }
+  .different hr {
+    margin: 30px auto;
+    max-width: 150px;
+    width: 60%;
   }
   .different span {
     border: 1px solid red;
