--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,142 +1,154 @@
-@media screen and(max-width:1000px){
+@media screen and(max-width:1000px) {
 
-    .wrapper{
-        width:90%; 
-        }
+    .wrapper {
+        width: 90%;
+    }
 }
 
-@media screen and(max-width:1000px){
+@media screen and(max-width:1000px) {
 
-.different {
-       
-    .txt{
-        width: 30%;
-  
+    .different {
+
+        .txt {
+            width: 30%;
+
         }
     }
 
-   .banner h1{
-       font-size: 3rem;
-       }      
+    .banner h1 {
+        font-size: 3rem;
+    }
 
 }
 
-@media screen and(max-width:870px){
+@media screen and(max-width:870px) {
 
     .menu {
         display: block;
         padding: 20px 0px;
+        overflow: hidden;
 
-        i{
+        i {
             display: block;
             border: 1px solid $Dark-Violet;
             padding: 4px;
-            }
+        }
+    }
+
+    .mostrar {
+        right: 0%;
+        transition: 1s ease-in-out;
+    }
+
+    nav {
+        background: $Very-Dark-Violet;
+        position: absolute;
+        z-index: 1;
+        top: 69px;
+        width: 100%;
+        right: 100%;
+        height: 100vh;
+        transition: 1s ease-in-out;
+
+
+        img {
+            display: block;
+            position: absolute;
+            width: 100%;
+            bottom: 0px;
         }
 
-     nav {
-             background: $Very-Dark-Violet;
-             position: absolute;
-             z-index: 1;
-             top: 59px;
-             width: 100%;
-             right: 0;
-             height: 100vh;
-             display: none;
+        ul {
+            flex-direction: column;
 
-             img{
-                 display: block;
-                 position: absolute;
-                 width: 100%;
-                 bottom: 0px;
-                 }
+        }
 
-             ul {
-                 flex-direction: column;
-                
-                 }
+        a {
+            margin-top: 40px;
+            color: #fff;
+            position: relative;
+            z-index: 1;
+        }
 
-            a{
-            margin-top: 40px ;
-            color: #fff ;
-            }  
-                
-         }
+    }
 
-        nav ul li:last-child{
-            width: 90%;
-            }     
-         
-        nav li:last-child a{
-          border: #fff 1px solid;
-          width: 100%;
-          margin-left: 0px; 
-          text-align: center;
-          padding: 15px 0px;
+    nav ul li:last-child {
+        width: 90%;
+    }
 
-             }
+    nav li:last-child a {
+        border: #fff 1px solid;
+        width: 100%;
+        margin-left: 0px;
+        text-align: center;
+        padding: 15px 0px;
 
-      .banner {
-         background:  $Dark-Violet;
-         padding: 0px;
-         overflow: visible;
+    }
 
-         .desktop {
-             display: none;
-             }
+    .banner {
+        background: $Dark-Violet;
+        padding: 0px;
+        overflow: visible;
+        hr{
 
-         .mobile{
-             display: block;
-             }        
+            display: none;
+        }
+
+        .desktop {
+            display: none;
+        }
+
+        .mobile {
+            display: block;
+        }
 
         .wrapper {
             width: 100%;
+        }
+
+        .container {
+            flex-direction: column-reverse;
+        }
+
+        p {
+            margin: 25px 0px;
+            line-height: 1.5;
+
+        }
+
+        .txt {
+
+            position: relative;
+
+
+            img {
+                display: block;
+                position: absolute;
+                top: 0;
             }
 
-         .container{
-             flex-direction: column-reverse;
-             }
+            .bottom {
+                right: 0;
+                top: 320px;
 
-           p{
-               margin: 25px 0px;
-               line-height: 1.5;
-               
-               }       
+            }
 
-          .txt  {
+            .main {
+                padding: 70px 0px;
+                margin-bottom: 20px;
+                text-align: center;
+                margin: auto;
+                width: 90%;
 
-              position: relative;
-            
+            }
 
-              img{
-                  display: block;
-                  position: absolute;
-                  top: 0;
-                  }
+        }
 
-              .bottom{
-                  right: 0;
-                  top:320px;
-                  
-                  }        
+        .wave-desktop {
+            display: none;
+        }
 
-            .main{    
-              padding: 70px 0px;
-              margin-bottom: 20px;
-              text-align: center;
-              margin: auto;
-              width: 90%; 
-              position: relative;
-                          
-                          }
-
-              }
-
-             .wave-desktop{
-                 display: none;
-                 } 
-                    
-        }                       
+    }
 
 
     .find {
@@ -146,120 +158,133 @@
         overflow: hidden;
         margin-top: 70px;
         text-align: center;
-        
-        .container{
+
+        .container {
             padding: 0px;
             position: static;
             flex-direction: column;
-            overflow: initial; 
+            overflow: initial;
+        }
+
+        h3 {
+            font-size: 2.5rem;
+            margin-bottom: 15px;
+            margin-right: 0px;
+        }
+
+        .wave-desktop {
+            display: none;
+        }
+
+        .wave-mobile {
+            display: block;
+        }
+    }
+
+    .different .container h2 {
+        font-size: 3rem;
+
+    }
+
+
+    .different {
+
+        text-align: center;
+
+        margin-top: 50px;
+
+        hr {
+            margin: 30px auto;
+            max-width: 150px;
+            width: 60%;
+        }
+
+        span {
+            border: 1px solid red;
+
+        }
+
+        .main-txt {
+
+            flex-direction: column;
+        }
+
+        .txt {
+            width: 100%;
+            max-width: 450px;
+            margin: 0px auto 35px auto;
+        }
+
+        .wave-desktop {
+            border: 1px solid red;
+            display: none;
+        }
+
+
+    }
+
+    footer {
+        //*FOOTER*//
+
+        text-align: center;
+
+        .waves-desktop {
+            display: none;
+        }
+
+        .waves-mobile {
+            display: block;
+            width: 100%;
+        }
+
+        .logo {
+            display: block;
+
+            ul {
+                justify-content: center;
+                margin-top: 15px;
             }
-
-         h3 {
-             font-size: 2.5rem;
-             margin-bottom: 15px;
-             margin-right: 0px;
-             }
-
-         .wave-desktop{
-             display: none;
-             }
-
-         .wave-mobile{
-             display: block;
-             }                  
         }
 
-       .different .container h2 {
-          font-size: 3rem;
-    
-         }  
-
-
-.different {
-
-    text-align: center;
-    margin-top: 50px;
-
-    span {
-        border: 1px solid red;
-        
-        }
-    .main-txt{
-
-        flex-direction: column;
+        .links {
+            .container {
+                display: block;
+            }
         }
 
-    .txt{
-        width: 100%;
-        max-width: 450px;
-        margin: 0px auto 35px auto;
+        .links ul li:first-child a {
+            margin: 30px auto;
         }
-
-     .wave-desktop{
-         border: 1px solid red;
-         display: none;} 
-
-               
-    }  
-
-    footer {   //*FOOTER*//
-    
-    text-align: center;
-
-    .waves-desktop{
-        display: none;
-        }
-    .waves-mobile{
-        display: block;
-        width: 100%;}        
-
-    .logo{
-        display: block;
-        ul {
-            justify-content:center;
-            margin-top:15px;    
-                }
-        }
-
-    .links {
-        .container{
-            display: block;}
-        }
-
-    .links ul li:first-child a {
-    margin: 30px auto;
-      }                
 
     }
 
 }
 
 
-@media screen and(max-width:700px){
+@media screen and(max-width:700px) {
 
 
 
 
-.different .container h2{
-    font-size: 2.5rem;
+    .different .container h2 {
+        font-size: 2.5rem;
     }
 
- .different .txt h3{
-    font-size: 1.5rem;
-    }       
+    .different .txt h3 {
+        font-size: 1.5rem;
+    }
 
 
 }
 
-@media screen and(max-width:400px){
+@media screen and(max-width:400px) {
 
-    .banner h1{
-    font-size: 2.5rem;
+    .banner h1 {
+        font-size: 2.5rem;
     }
 
-  .find h3{
-      font-size: 2rem;
-      }
+    .find h3 {
+        font-size: 2rem;
+    }
 
 }
-
